--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.1"
+  },
+  "devDependencies": {
+    "jest": "^21.2.1"
+  },
+  "scripts": {
+    "test": "jest --coverage"
   }
 }
